--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,113 @@
 .App {
+ width: 100vw;
+ height: 100vh;
+ display: grid;
+ grid-template-rows: 15% 85%;
+
+}
+
+.shades{
+   width:100%;
+   height:100%;
+ display: grid;
+  grid-template-columns: repeat(auto-fill,10%);
+  grid-template-rows: repeat(auto-fill,10%);
+  animation-name: leftToRight;
+  animation-duration: 1s;
+}
+
+.shadeSearch{
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem  4rem;
+}
+
+.shade{
+  color:white;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding-top: 20px;
+  cursor: pointer;
+
+}
+
+.Emoji{
+  font-size: 3rem;;
+}
+
+.shade-Input{
+  border:none;
+  background-color: #e9e9e9;
+  padding: 1rem 1.5rem;
+  border-radius: 27px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.shade-Input:focus{
+  outline: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.copied{
+ 
+cursor: pointer;
+animation-name: copied;
+animation-duration: 0.3s;
+}
+
+@keyframes  copied {
+  0%{
+    opacity: 0;
+    font-size: 0; 
+  }
+  100%{
+    opacity: 1;
+    font-size: 1rem;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes  leftToRight {
+  0%{
+     width:0%;
   }
-  to {
-    transform: rotate(360deg);
+  100%{
+    width:100%;
   }
 }
+
+@media screen and (max-width:767px){
+  .shades{
+    grid-template-columns: repeat(4,25%);
+    grid-template-rows: repeat(100,20%);
+  }
+
+  .Emoji{
+    font-size:40px;
+  }
+
+  .shadeSearch{
+    padding:1rem 2rem;
+  }
+}
+
+
+@media screen and (max-width:767px){
+  .shades{
+    grid-template-columns: repeat(2,50%);
+    grid-template-rows: repeat(100,20%);
+  }
+
+  .Emoji{
+    font-size:30px;
+  }
+
+  .shadeSearch{
+    padding:1rem 1rem;
+  }
+}
+
+
+
+
